--- a/README
+++ b/README
@@ -1,9 +1,1 @@
-:heart::heart::heart::heart:
-:heart::heart::heart::heart:
-
-
-:heart::heart::heart::heart:
-:heart::heart::heart::heart:
-
-:heart::heart::heart::heart:
-:heart::heart::heart::heart:
+:heart:
